update(Qwen): Finish Qwen API calling and display

--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -5892,7 +5892,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "fin-analyser",
       "language": "python",
       "name": "python3"
     },
